# docker_streamlit_app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: README.md  api.py  streamlit_app.py
app/pages/: 1_🔍_Explore_the_Data.py  2_📊_Data_visualization.py  3_🔮_Predict_Survival.py
data/: test.csv
models/: README.md  model_titanic.pkl
